--- a/app/assets/stylesheets/Components/_navbar.scss
+++ b/app/assets/stylesheets/Components/_navbar.scss
@@ -1,8 +1,57 @@
 .navbar-container {
-  height: 100px;
+  background-color: rgba(255,255,255,0);
+}
+
+.navbar-content {
+  height: 70px;
   width: 100vw;
-  background-color: #f5f5f5;
+  padding-right: 8vh;
+  padding-left: 8vh;
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 16px;
+  top: 0px;
+  position: fixed;
+
+  a {
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+  }
+
+  #nav-center {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%)
+  }
+
+
+  .logo {
+    font-size: 28px;
+  }
 }
+
+#nav-left {
+  display: inline-flex;
+  justify-content: space-between;
+
+  #first-item {
+
+  }
+  #second-item {
+    padding-left: 8vh;
+  }
+  #third-item {
+    padding-left: 8vh;
+  }
+}
+
+#shopping-cart img {
+  max-width: 25px;
+  margin-left: 16px;
+  padding-bottom: 8px;
+}
+
+
