--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,10 @@
  /*Custom bootstrap variables must be set or imported *before* bootstrap.*/
-
+@import "bootstrap-sprockets";
 @import "bootstrap";
 @import "components/index";
 @import "pages/index";
+
+// Graphical variables
+@import "config/fonts";
+// @import "config/colors";
+// @import "config/bootstrap_variables";
