added card componentns and started to design the articles index page

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,34 @@
-<h1>All items</h1>
+<div class="articles-section">
+  <h1>All items</h1>
 
-<%= link_to "Add a new article", new_article_path %>
+  <p><%= link_to "Add a new article", new_article_path %>
+  </p>
 
-<div class="article-card">
-<% @articles.each do |article| %>
-<%= article.name %>
-<%= article.price %>
-<%= link_to 'SEE MORE', article_path(article) %>
+  <div class="container">
+    <div class="row">
+      <% @articles.each do |article| %>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+
+        <div class="card-product mx-auto" style="background-image: url(<%= article.photo %>);">
+          <%= link_to article_path(article) do %>
+
+          <div class="card-content">
+            <div class="card-details">
+              <h4> <%= article.name %></h4>
+              <p> <%= article.price %>€</p>
+            </div>
+            <div class="card-add-to-cart">
+              <%= link_to "Add to cart", article_path(article), class:"btn-primary" %>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
 
-<% end %>
 
