--- a/app/assets/stylesheets/Components/_card-product.scss
+++ b/app/assets/stylesheets/Components/_card-product.scss
@@ -1,6 +1,25 @@
-.card {
-  .card-image {
-    width: 300px;
-    height: 300px;
-  }
+.card-product {
+  width: 300px;
+  height: 300px;
+  margin-top: 14vh;
+  background-position: center;
+  background-size: cover;
+
+}
+
+.card-details {
+  padding-top: 12px;
+  text-align: center;
+  justify-content: center;
+
+}
+
+.card-content {
+  height: 300px;
+}
+
+.card-add-to-cart {
+  position: absolute;
+  bottom: 20px;
+  right: 50%
 }
