--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,8 @@
 <%= simple_form_for(@article) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :price %>
-    <%= f.input :description %>
-    <%= f.button :submit, class: "btn btn-primary"  %>
+<%= f.input :name %>
+<%= f.input :price %>
+<%= f.input :description %>
+<%= f.input :photo %>
+<%= f.input :photo_cache, as: :hidden %>
+<%= f.button :submit, class: "btn btn-primary"  %>
 <% end %>
